# course_cpp_oo

./: .~lock.spline.csv#  Makefile  PlayerScore.cpp  README.md  Spline.cpp  Spline.h  a.out  add_even_between.cpp  data.txt  eigen_test.cpp  histogram  histogram.cpp  main.cpp  map1.cpp  map2.cpp  median_and_mean.cpp  players.csv  spline.csv  test.cpp  yuv.cpp
build-lab4-Desktop_Qt_6_5_0_GCC_64bit-Debug/: Makefile  lab4  moc_mainwindow.cpp
build-lab4-Desktop_Qt_6_5_0_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
build-lab4-Desktop_Qt_6_5_0_GCC_64bit-Debug/.qtc_clangd/.cache/clangd/index/: QCoreApplication.C62E54779EF26D02.idx  main.cpp.9B12603AD9EE241D.idx  (+31 more)
build-yuv-viewer-student-Desktop_Qt_6_5_0_GCC_64bit-Debug/: Makefile  moc_mainwindow.cpp  moc_predefs.h  yuv-viewer-student
build-yuv-viewer-student-Desktop_Qt_6_5_0_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
lab04_basic/: CMakeLists.txt.user.0eca0ac
lab04_basic/.build/: CMakeCache.txt
lab04_basic/src/: checkerimage.cpp  checkerimage.h  imageparams.h  mainwindow.cpp  mainwindow.h
lab05-yuv-viewer-student/: imageparams.h  main.cpp  mainwindow.cpp  mainwindow.h  triangleimage.cpp  triangleimage.h  util.h  yuv-viewer-student.pro  yuvimage.cpp  yuvimage.h
lab4/: CMakeLists.txt  CMakePresets.json  lab4.pro
lab4/src/: CMakeLists.txt
labv2/build-lab4_v2-Desktop_Qt_6_5_0_GCC_64bit-Debug/: Makefile  lab4_v2  moc_mainwindow.cpp  qmake_qmake_qm_files.qrc  qrc_qmake_qmake_qm_files.cpp
labv2/build-lab4_v2-Desktop_Qt_6_5_0_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
(+813 files in other folders)
